--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script
 			  src="https://code.jquery.com/jquery-3.5.1.min.js"
 			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-			  crossorigin="anonymous"></script>
+              crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -172,44 +172,185 @@
                         </svg>
                     </a>
                 </div>
-                <div class="product">
-                    <div class="product__img">
-                        <img src="./img/content/product_1.png" alt="product" class="product__img-item">
-                    </div>
-                    <div class="product__content">
-                        <div class="specs">
-                            <div class="specs__block">
-                                <svg class="specs__block-item">
-                                    <use xlink:href="./img/icons/sprite.svg#gear"></use>
-                                </svg>
+                <div class="slider">
+                    <ul class="product__list" id="product__list">
+                        <li class="product__item">
+                            <div class="product__img">
+                                <img src="./img/content/product_1.png" alt="product" class="product__img-item">
                             </div>
-                        </div>
-                        <h2 class="product__title section__title">
-                            beats solo 3. цвет 
-                            «атласное серебро»
-                        </h2>
-                        <div class="product__subtitle">
-                           <p>
-                                Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.
-                            </p>
-                        </div>
-                        <div class="param">
-                            <ul class="param__list">
-                                <li class="param__item">
-                                    <div class="param__title">Зарядка</div>
-                                    <div class="param__desc">2 часа</div>
-                                </li>
-                                <li class="param__item">
-                                    <div class="param__title">Вес</div>
-                                    <div class="param__desc">215 грамм</div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="product__info">
-                            <div class="product__cost">14 990 ₽</div>
-                            <a class="button">Заказать</a>
-                        </div>
-                    </div>
+                            <div class="product__content">
+                                <div class="specs">
+                                    <div class="specs__block">
+                                        <svg class="specs__block-item">
+                                            <use xlink:href="./img/icons/sprite.svg#gear"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="dropdown">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#bluetooth"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Bluetooth</span>
+                                                <span class="dropdown__desc">4.0</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#road"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Дальность</span>
+                                                <span class="dropdown__desc">10 м</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#charger"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Зарядка</span>
+                                                <span class="dropdown__desc">2 ч</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#kg"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Вес</span>
+                                                <span class="dropdown__desc">215гр</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#patent"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Гарантия</span>
+                                                <span class="dropdown__desc">1 год</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h2 class="product__title section__title">
+                                    beats solo 3. цвет 
+                                    «атласное серебро»
+                                </h2>
+                                <div class="product__subtitle">
+                                <p>
+                                        Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.
+                                    </p>
+                                </div>
+                                <div class="param">
+                                    <ul class="param__list">
+                                        <li class="param__item">
+                                            <div class="param__title">Зарядка</div>
+                                            <div class="param__desc">2 часа</div>
+                                        </li>
+                                        <li class="param__item">
+                                            <div class="param__title">Вес</div>
+                                            <div class="param__desc">215 грамм</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="product__info">
+                                    <div class="product__cost">14 990 ₽</div>
+                                    <a class="button">Заказать</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="product__item">
+                            <div class="product__img">
+                                <img src="./img/content/product_1.png" alt="product" class="product__img-item">
+                            </div>
+                            <div class="product__content">
+                                <div class="specs">
+                                    <div class="specs__block">
+                                        <svg class="specs__block-item">
+                                            <use xlink:href="./img/icons/sprite.svg#gear"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="dropdown">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#bluetooth"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Bluetooth</span>
+                                                <span class="dropdown__desc">4.0</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#road"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Дальность</span>
+                                                <span class="dropdown__desc">10 м</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#charger"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Зарядка</span>
+                                                <span class="dropdown__desc">2 ч</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#kg"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Вес</span>
+                                                <span class="dropdown__desc">215гр</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__img">
+                                                    <svg class="dropdown__img-item">
+                                                        <use xlink:href="./img/icons/sprite.svg#patent"></use>
+                                                    </svg>
+                                                </div>
+                                                <span class="dropdown__title">Гарантия</span>
+                                                <span class="dropdown__desc">1 год</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h2 class="product__title section__title">
+                                    beats solo pro. цвет 
+                                    «красный цитрус»
+                                </h2>
+                                <div class="product__subtitle">
+                                <p>
+                                        Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.
+                                    </p>
+                                </div>
+                                <div class="param">
+                                    <ul class="param__list">
+                                        <li class="param__item">
+                                            <div class="param__title">Зарядка</div>
+                                            <div class="param__desc">2 часа</div>
+                                        </li>
+                                        <li class="param__item">
+                                            <div class="param__title">Вес</div>
+                                            <div class="param__desc">215 грамм</div>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="product__info">
+                                    <div class="product__cost">14 990 ₽</div>
+                                    <a class="button">Заказать</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div class="arrow arrow--right">
                     <a href="#" class="arrow__img" id="right">
@@ -217,6 +358,89 @@
                             <use xlink:href="./img/icons/sprite.svg#arrow"></use>
                         </svg>
                     </a>
+                </div>
+            </div>
+        </section>
+        <section class="section team-section">
+            <div class="container team__container">
+                <h2 class="section__title">Команда</h2>
+                <div class="team">
+                    <ul class="team__list">
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/boris.jpg" alt="boris" class="team__img-item">
+                            </div>
+                            <a href="#" class="team__link">
+                                <h4 class="team__name">Борис Федорович</h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
+                            <div class="team__desc">
+                                <div class="team__app">Главный технолог</div>
+                                <div class="team__subtitle">
+                                    Отвечает за вкусовые 
+                                    качества и калорийность.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/alla.jpg" alt="alla" class="team__img-item">
+                            </div>
+                            <a href="#" class="team__link">
+                                <h4 class="team__name">Алла Иванова</h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
+                            <div class="team__desc">
+                                <div class="team__app">Специалист по упаковке</div>
+                                <div class="team__subtitle">
+                                    Автор запоминающегося стиля 
+                                    наших батончиков.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/cyril.jpg" alt="cyril" class="team__img-item">
+                            </div>
+                            <a href="#" class="team__link" id="open">
+                                <h4 class="team__name">Кирилл Матросов</h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
+                            <div class="team__desc" id="block">
+                                <div class="team__app">Дизайнер</div>
+                                <div class="team__subtitle">
+                                    Разработал дизан
+                                    наушников beats solo 3.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/mila.jpg" alt="mila" class="team__img-item">
+                            </div>
+                            <a href="#" class="team__link">
+                                <h4 class="team__name">
+                                    Мила Рыжкова
+                                </h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
+                            <div class="team__desc">
+                                <div class="team__app">PR, маркетинг</div>
+                                <div class="team__subtitle">
+                                    По всем вопросам сотрудничества 
+                                    и рекламы писать только Миле. 
+                                </div>
+                            </div>
+                        </li> 
+                    </ul>
                 </div>
             </div>
         </section>
